for-in 반복문. print 함수 end, sep 파라미터.

--- a/lab_python/python05_for.ipynb
+++ b/lab_python/python05_for.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOW9JIue3hE2BnkGnzu34vM",
+      "authorship_tag": "ABX9TyMKY7Cb7agTkmqTVeNyjWou",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -357,6 +357,308 @@
             "1\n",
             "3\n",
             "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "for-in 반복문과 range() 함수를 사용해서 구구단 2단은 2x2까지, 3단은 3x3까지, ..., 9단은 9x9까지 출력."
+      ],
+      "metadata": {
+        "id": "boMvGvAV1EYv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in range(2, 10):\n",
+        "    print(f'=== {x} 단 ===')\n",
+        "    for y in range(1, 10):\n",
+        "        print(f'{x} x {y} = {x * y}')\n",
+        "        if x == y:\n",
+        "            break  # for y in range() 반복을 멈춤."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eQsHhtx_1Gwe",
+        "outputId": "c554cc7e-d8fb-446c-d199-c0d321f29f3e"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=== 2 단 ===\n",
+            "2 x 1 = 2\n",
+            "2 x 2 = 4\n",
+            "=== 3 단 ===\n",
+            "3 x 1 = 3\n",
+            "3 x 2 = 6\n",
+            "3 x 3 = 9\n",
+            "=== 4 단 ===\n",
+            "4 x 1 = 4\n",
+            "4 x 2 = 8\n",
+            "4 x 3 = 12\n",
+            "4 x 4 = 16\n",
+            "=== 5 단 ===\n",
+            "5 x 1 = 5\n",
+            "5 x 2 = 10\n",
+            "5 x 3 = 15\n",
+            "5 x 4 = 20\n",
+            "5 x 5 = 25\n",
+            "=== 6 단 ===\n",
+            "6 x 1 = 6\n",
+            "6 x 2 = 12\n",
+            "6 x 3 = 18\n",
+            "6 x 4 = 24\n",
+            "6 x 5 = 30\n",
+            "6 x 6 = 36\n",
+            "=== 7 단 ===\n",
+            "7 x 1 = 7\n",
+            "7 x 2 = 14\n",
+            "7 x 3 = 21\n",
+            "7 x 4 = 28\n",
+            "7 x 5 = 35\n",
+            "7 x 6 = 42\n",
+            "7 x 7 = 49\n",
+            "=== 8 단 ===\n",
+            "8 x 1 = 8\n",
+            "8 x 2 = 16\n",
+            "8 x 3 = 24\n",
+            "8 x 4 = 32\n",
+            "8 x 5 = 40\n",
+            "8 x 6 = 48\n",
+            "8 x 7 = 56\n",
+            "8 x 8 = 64\n",
+            "=== 9 단 ===\n",
+            "9 x 1 = 9\n",
+            "9 x 2 = 18\n",
+            "9 x 3 = 27\n",
+            "9 x 4 = 36\n",
+            "9 x 5 = 45\n",
+            "9 x 6 = 54\n",
+            "9 x 7 = 63\n",
+            "9 x 8 = 72\n",
+            "9 x 9 = 81\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in range(2, 10):\n",
+        "    print(f'=== {x} 단 ===')\n",
+        "    for y in range(1, x + 1):\n",
+        "        print(f'{x} x {y} = {x * y}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SAJclLlu5L_Y",
+        "outputId": "ad87c223-c316-4f1a-c3a2-654f123c5762"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=== 2 단 ===\n",
+            "2 x 1 = 2\n",
+            "2 x 2 = 4\n",
+            "=== 3 단 ===\n",
+            "3 x 1 = 3\n",
+            "3 x 2 = 6\n",
+            "3 x 3 = 9\n",
+            "=== 4 단 ===\n",
+            "4 x 1 = 4\n",
+            "4 x 2 = 8\n",
+            "4 x 3 = 12\n",
+            "4 x 4 = 16\n",
+            "=== 5 단 ===\n",
+            "5 x 1 = 5\n",
+            "5 x 2 = 10\n",
+            "5 x 3 = 15\n",
+            "5 x 4 = 20\n",
+            "5 x 5 = 25\n",
+            "=== 6 단 ===\n",
+            "6 x 1 = 6\n",
+            "6 x 2 = 12\n",
+            "6 x 3 = 18\n",
+            "6 x 4 = 24\n",
+            "6 x 5 = 30\n",
+            "6 x 6 = 36\n",
+            "=== 7 단 ===\n",
+            "7 x 1 = 7\n",
+            "7 x 2 = 14\n",
+            "7 x 3 = 21\n",
+            "7 x 4 = 28\n",
+            "7 x 5 = 35\n",
+            "7 x 6 = 42\n",
+            "7 x 7 = 49\n",
+            "=== 8 단 ===\n",
+            "8 x 1 = 8\n",
+            "8 x 2 = 16\n",
+            "8 x 3 = 24\n",
+            "8 x 4 = 32\n",
+            "8 x 5 = 40\n",
+            "8 x 6 = 48\n",
+            "8 x 7 = 56\n",
+            "8 x 8 = 64\n",
+            "=== 9 단 ===\n",
+            "9 x 1 = 9\n",
+            "9 x 2 = 18\n",
+            "9 x 3 = 27\n",
+            "9 x 4 = 36\n",
+            "9 x 5 = 45\n",
+            "9 x 6 = 54\n",
+            "9 x 7 = 63\n",
+            "9 x 8 = 72\n",
+            "9 x 9 = 81\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# `print()` 함수\n",
+        "\n",
+        "*   탈출 문자열(escape string):\n",
+        "    *   `'\\n'`: 줄바꿈(new line)\n",
+        "    *   `'\\t'`: 탭(tab)\n",
+        "    *   `'\\''`: 작은따옴표. 문자열 안에 인용부호를 포함하고 싶을 때 사용.\n",
+        "*   `print()` 함수의 파라미터(parameter)\n",
+        "    *   `end`: print 함수가 아규먼트들을 출력한 후 마지막에 어떤 문자열을 추가할 것인 지를 설정. 기본값은 줄바꿈(`\\n`).\n",
+        "    *   `sep`: separator(구분자). print 함수가 아규먼트들을 출력할 때, 각각의 아규먼트들을 구분하기 위한 문자열을 설정. 기본값이 공백(' ') 1개.\n"
+      ],
+      "metadata": {
+        "id": "VXAZ0lNN6Cd4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('I\\'m a boy.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G7hPbudi66PC",
+        "outputId": "96aa5c3e-17c3-4dd8-cb50-fdffda09553f"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I'm a boy.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('안녕하세요.')\n",
+        "print('월요일 아침입니다.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yxvqiTnf9CnR",
+        "outputId": "e5024972-0fff-470f-cd5f-4cb89d6c4081"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "안녕하세요.\n",
+            "월요일 아침입니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('안녕하세요.', end='::')\n",
+        "print('월요일 아침입니다.')\n",
+        "print('Hello!')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1hEHXQDY9OYB",
+        "outputId": "19e32be3-2998-48a5-b961-5ddc83d9cc44"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "안녕하세요.::월요일 아침입니다.\n",
+            "Hello!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('안녕', 'Hello')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y1d8ikxB9wFU",
+        "outputId": "6a31d6f5-542d-42f7-f5e2-890aed9e8199"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "안녕 Hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('안녕', 'Hello', sep=',')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "83pdNWOW-t5x",
+        "outputId": "f2f6b38d-423b-4a2e-c1b6-c649ddb68941"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "안녕,Hello\n"
           ]
         }
       ]
