for-in 반복문 연습

--- a/lab_python/python05_for.ipynb
+++ b/lab_python/python05_for.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMKY7Cb7agTkmqTVeNyjWou",
+      "authorship_tag": "ABX9TyPiygaOkuaULax7rLm5FHhx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -659,6 +659,131 @@
           "name": "stdout",
           "text": [
             "안녕,Hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Ex. 1\n",
+        "1부터 10까지 정수들을 한 줄에 출력"
+      ],
+      "metadata": {
+        "id": "8BzGx51CUBRY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in range(1, 11):\n",
+        "    print(x, end='\\t')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZksQU24CUIzw",
+        "outputId": "cfde227e-955e-4314-a032-2b81d5983f39"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\t2\t3\t4\t5\t6\t7\t8\t9\t10\t"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ex. 2 아래와 같이 출력하는 코드를 작성하세요.\n",
+        "\n",
+        "```\n",
+        "1 꼬마 2 꼬마 3 꼬마 인디언\n",
+        "4 꼬마 5 꼬마 6 꼬마 인디언\n",
+        "7 꼬마 8 꼬마 9 꼬마 인디언\n",
+        "10 꼬마 인디언 boys!\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "dT8oU4yFUkVQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in range(1, 11):\n",
+        "    print(f'{x} 꼬마', end=' ')\n",
+        "    if x % 3 == 0:\n",
+        "        print('인디언')\n",
+        "print('인디언 boys!')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1CA2DguWU2b4",
+        "outputId": "ae4a8f18-7892-4b32-bfa9-e38b4ef118d0"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 꼬마 2 꼬마 3 꼬마 인디언\n",
+            "4 꼬마 5 꼬마 6 꼬마 인디언\n",
+            "7 꼬마 8 꼬마 9 꼬마 인디언\n",
+            "10 꼬마 인디언 boys!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ex. 3\n",
+        "1부터 100까지 정수들을 한 줄에 10개씩 출력하는 코드를 작성하세요."
+      ],
+      "metadata": {
+        "id": "p1x2oYhMU264"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in range(1, 101):\n",
+        "    print(x, end='\\t')\n",
+        "    if x % 10 == 0:\n",
+        "        print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gSjdY_S3U-9Q",
+        "outputId": "f8eed49b-7ffa-40a2-e350-6eb1867cc19d"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\t2\t3\t4\t5\t6\t7\t8\t9\t10\t\n",
+            "11\t12\t13\t14\t15\t16\t17\t18\t19\t20\t\n",
+            "21\t22\t23\t24\t25\t26\t27\t28\t29\t30\t\n",
+            "31\t32\t33\t34\t35\t36\t37\t38\t39\t40\t\n",
+            "41\t42\t43\t44\t45\t46\t47\t48\t49\t50\t\n",
+            "51\t52\t53\t54\t55\t56\t57\t58\t59\t60\t\n",
+            "61\t62\t63\t64\t65\t66\t67\t68\t69\t70\t\n",
+            "71\t72\t73\t74\t75\t76\t77\t78\t79\t80\t\n",
+            "81\t82\t83\t84\t85\t86\t87\t88\t89\t90\t\n",
+            "91\t92\t93\t94\t95\t96\t97\t98\t99\t100\t\n"
           ]
         }
       ]
