--- a/lab_python/python05_for.ipynb
+++ b/lab_python/python05_for.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPiygaOkuaULax7rLm5FHhx",
+      "authorship_tag": "ABX9TyMcPZt5KXC3mMwyEr1IZYF4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -700,7 +700,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Ex. 2 아래와 같이 출력하는 코드를 작성하세요.\n",
+        "# Ex. 2\n",
+        "아래와 같이 출력하는 코드를 작성하세요.\n",
         "\n",
         "```\n",
         "1 꼬마 2 꼬마 3 꼬마 인디언\n",
@@ -746,7 +747,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Ex. 3\n",
+        "# Ex. 3\n",
         "1부터 100까지 정수들을 한 줄에 10개씩 출력하는 코드를 작성하세요."
       ],
       "metadata": {
@@ -766,9 +767,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gSjdY_S3U-9Q",
-        "outputId": "f8eed49b-7ffa-40a2-e350-6eb1867cc19d"
+        "outputId": "7f3cb096-7888-4b01-ddbf-1bbe576a5ed5"
       },
-      "execution_count": 33,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -784,6 +785,142 @@
             "71\t72\t73\t74\t75\t76\t77\t78\t79\t80\t\n",
             "81\t82\t83\t84\t85\t86\t87\t88\t89\t90\t\n",
             "91\t92\t93\t94\t95\t96\t97\t98\t99\t100\t\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Ex. 4\n",
+        "아래와 같이 출력하는 코드를 작성하세요.\n",
+        "\n",
+        "```\n",
+        "1  2  #  4  5  #  7  8  #  10\n",
+        "11 12 #  14 15 #  17 18 #  20\n",
+        "21 22 #  24 25 #  27 28 #  #\n",
+        "#  #  #  #  #  #  #  #  #  40\n",
+        "...\n",
+        "81 82 #  84 85 #  87 88 #  #\n",
+        "#  #  #  #  #  #  #  #  #  100\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "M9ZBYjkQdR9c"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in range(1, 101):\n",
+        "    n_1 = x % 10  # 10으로 나눈 나머지 -> 1의 자릿수\n",
+        "    n_10 = x // 10  # 10으로 나눈 몫 -> 10의 자릿수\n",
+        "    b_1 = (n_1 == 3) or (n_1 == 6) or (n_1 == 9)  # 1의 자릿수가 3 또는 6 또는 9이면\n",
+        "    b_10 = (n_10 == 3) or (n_10 == 6) or (n_10 == 9)  # 10의 자릿수가 3 또는 6 또는 9이면\n",
+        "\n",
+        "    if b_1 and b_10:\n",
+        "        print('##', end='\\t')\n",
+        "    elif b_1 or b_10:\n",
+        "        print('#', end='\\t')\n",
+        "    else:\n",
+        "        print(x, end='\\t')\n",
+        "\n",
+        "    if x % 10 == 0:\n",
+        "        print()  # 줄바꿈"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qrMgTXCfiokt",
+        "outputId": "17b120b0-cbe3-47a1-93fc-1f568ca104f6"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\t2\t#\t4\t5\t#\t7\t8\t#\t10\t\n",
+            "11\t12\t#\t14\t15\t#\t17\t18\t#\t20\t\n",
+            "21\t22\t#\t24\t25\t#\t27\t28\t#\t#\t\n",
+            "#\t#\t##\t#\t#\t##\t#\t#\t##\t40\t\n",
+            "41\t42\t#\t44\t45\t#\t47\t48\t#\t50\t\n",
+            "51\t52\t#\t54\t55\t#\t57\t58\t#\t#\t\n",
+            "#\t#\t##\t#\t#\t##\t#\t#\t##\t70\t\n",
+            "71\t72\t#\t74\t75\t#\t77\t78\t#\t80\t\n",
+            "81\t82\t#\t84\t85\t#\t87\t88\t#\t#\t\n",
+            "#\t#\t##\t#\t#\t##\t#\t#\t##\t100\t\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# in 연산자: 변수 in (값1, 값2, ...)\n",
+        "# 변수의 값이 (값1, 값2, ...) 중에 하나이면 True, 그렇지 않으면 False.\n",
+        "x = 9\n",
+        "x in (3, 6, 9)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R7wBVAJHnnpv",
+        "outputId": "28d8e2c5-174c-4de1-9327-d64460daf0bb"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in range(1, 101):\n",
+        "    n_1 = x % 10\n",
+        "    n_10 = x // 10\n",
+        "    if n_1 in (3, 6, 9) or n_10 in (3, 6, 9):\n",
+        "        print('#', end='\\t')\n",
+        "    else:\n",
+        "        print(x, end='\\t')\n",
+        "\n",
+        "    if x % 10 == 0:\n",
+        "        print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o4i8jxeSoMbe",
+        "outputId": "84d6eb84-7206-4615-fd83-4ef57cb7bb06"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\t2\t#\t4\t5\t#\t7\t8\t#\t10\t\n",
+            "11\t12\t#\t14\t15\t#\t17\t18\t#\t20\t\n",
+            "21\t22\t#\t24\t25\t#\t27\t28\t#\t#\t\n",
+            "#\t#\t#\t#\t#\t#\t#\t#\t#\t40\t\n",
+            "41\t42\t#\t44\t45\t#\t47\t48\t#\t50\t\n",
+            "51\t52\t#\t54\t55\t#\t57\t58\t#\t#\t\n",
+            "#\t#\t#\t#\t#\t#\t#\t#\t#\t70\t\n",
+            "71\t72\t#\t74\t75\t#\t77\t78\t#\t80\t\n",
+            "81\t82\t#\t84\t85\t#\t87\t88\t#\t#\t\n",
+            "#\t#\t#\t#\t#\t#\t#\t#\t#\t100\t\n"
           ]
         }
       ]
