--- a/lab_python/python05_for.ipynb
+++ b/lab_python/python05_for.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMcPZt5KXC3mMwyEr1IZYF4",
+      "authorship_tag": "ABX9TyNCiQGpi08paJrBjtjy0S2O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -104,7 +104,7 @@
         "id": "YJjzHPeQqRIE",
         "outputId": "83e7de72-a829-4bdb-cd9f-2274e7b15d69"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
         "id": "yjdeDlsnqtu_",
         "outputId": "dd687797-1aee-4ddc-b72b-c025b6dea3b0"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +164,7 @@
         "id": "TJBr7ZXAr1QV",
         "outputId": "e822cfb8-0b49-424f-fb49-db8cae72a059"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +192,7 @@
         "id": "9aCQyLOfsgzg",
         "outputId": "0fc44406-d384-4410-876c-44f8aaad7a00"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +222,7 @@
         "id": "xFBVVgEKtcZM",
         "outputId": "ccade826-6049-40c1-96f2-d804e3858134"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,7 +250,7 @@
         "id": "7IGez-UTuXpd",
         "outputId": "a9f6d4c2-9ff2-48f0-8fdb-4ef3341a77c0"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +278,7 @@
         "id": "wmEbF96_ucaU",
         "outputId": "72056698-44d7-4c22-a3d9-01bd6c35b09b"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,7 +320,7 @@
         "id": "bFWHKT-zv57N",
         "outputId": "d522586e-a50a-40f4-89f7-9ccd37af61c7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,7 +347,7 @@
         "id": "cAtu7iR9wjhI",
         "outputId": "0d6083d3-27b7-491e-d332-f295f69c00d1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,7 +387,7 @@
         "id": "eQsHhtx_1Gwe",
         "outputId": "c554cc7e-d8fb-446c-d199-c0d321f29f3e"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,7 +464,7 @@
         "id": "SAJclLlu5L_Y",
         "outputId": "ad87c223-c316-4f1a-c3a2-654f123c5762"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -555,7 +555,7 @@
         "id": "G7hPbudi66PC",
         "outputId": "96aa5c3e-17c3-4dd8-cb50-fdffda09553f"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -579,7 +579,7 @@
         "id": "yxvqiTnf9CnR",
         "outputId": "e5024972-0fff-470f-cd5f-4cb89d6c4081"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,7 +605,7 @@
         "id": "1hEHXQDY9OYB",
         "outputId": "19e32be3-2998-48a5-b961-5ddc83d9cc44"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -629,7 +629,7 @@
         "id": "y1d8ikxB9wFU",
         "outputId": "6a31d6f5-542d-42f7-f5e2-890aed9e8199"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -652,7 +652,7 @@
         "id": "83pdNWOW-t5x",
         "outputId": "f2f6b38d-423b-4a2e-c1b6-c649ddb68941"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -686,7 +686,7 @@
         "id": "ZksQU24CUIzw",
         "outputId": "cfde227e-955e-4314-a032-2b81d5983f39"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -730,7 +730,7 @@
         "id": "1CA2DguWU2b4",
         "outputId": "ae4a8f18-7892-4b32-bfa9-e38b4ef118d0"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -769,7 +769,7 @@
         "id": "gSjdY_S3U-9Q",
         "outputId": "7f3cb096-7888-4b01-ddbf-1bbe576a5ed5"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -835,7 +835,7 @@
         "id": "qrMgTXCfiokt",
         "outputId": "17b120b0-cbe3-47a1-93fc-1f568ca104f6"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -870,7 +870,7 @@
         "id": "R7wBVAJHnnpv",
         "outputId": "28d8e2c5-174c-4de1-9327-d64460daf0bb"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -903,9 +903,127 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o4i8jxeSoMbe",
-        "outputId": "84d6eb84-7206-4615-fd83-4ef57cb7bb06"
+        "outputId": "622192ef-6b6e-44f8-a3df-a501ba3e102f"
       },
-      "execution_count": 49,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\t2\t#\t4\t5\t#\t7\t8\t#\t10\t\n",
+            "11\t12\t#\t14\t15\t#\t17\t18\t#\t20\t\n",
+            "21\t22\t#\t24\t25\t#\t27\t28\t#\t#\t\n",
+            "#\t#\t#\t#\t#\t#\t#\t#\t#\t40\t\n",
+            "41\t42\t#\t44\t45\t#\t47\t48\t#\t50\t\n",
+            "51\t52\t#\t54\t55\t#\t57\t58\t#\t#\t\n",
+            "#\t#\t#\t#\t#\t#\t#\t#\t#\t70\t\n",
+            "71\t72\t#\t74\t75\t#\t77\t78\t#\t80\t\n",
+            "81\t82\t#\t84\t85\t#\t87\t88\t#\t#\t\n",
+            "#\t#\t#\t#\t#\t#\t#\t#\t#\t100\t\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'h' in 'Hello'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "li5YvdCusyf3",
+        "outputId": "e28ef312-e16a-4426-e671-5d48c37bb355"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'l' in 'Hello'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SJShbHYbtA1Q",
+        "outputId": "c712a619-2d97-41b0-d4f1-5b7258666c7f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'9' in '95'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wSRbqQ_htR4I",
+        "outputId": "15b74445-7369-4208-f258-c5cf7945c5da"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in range(1, 101):\n",
+        "    x_str = str(x)  # 명시적 타입 변환: 정수 x를 문자열로 변환.\n",
+        "    if ('3' in x_str) or ('6' in x_str) or ('9' in x_str):\n",
+        "        print('#', end='\\t')\n",
+        "    else:\n",
+        "        print(x, end='\\t')\n",
+        "\n",
+        "    if x % 10 == 0:\n",
+        "        print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_tPGALs7tmMP",
+        "outputId": "da04aa3d-68d3-4828-f556-4e34091c638d"
+      },
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
