문자열 indexing, slicing.

--- a/lab_python/python06_list.ipynb
+++ b/lab_python/python06_list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPTD/Syjeg+P0N541QBjGna",
+      "authorship_tag": "ABX9TyPPiwvUbnNFVGgBysa5Vgcg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -297,6 +297,374 @@
             "100\n",
             "5\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Slicing\n",
+        "\n",
+        "`list_name[start:end]`\n",
+        "\n",
+        "*   리스트에서 start <= index < end 범위의 아이템들을 잘라내는 방법.\n",
+        "*   시작 인덱스 start를 생략하면 첫번째 아이템부터 잘라냄. start의 기본값은 0.\n",
+        "*   종료 인덱스 end를 생략하면 마지막 아이템까지 잘라냄.\n",
+        "*   slicing의 결과는 *새로운 리스트*.\n"
+      ],
+      "metadata": {
+        "id": "Q12wAxD17a06"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qOi3BT8I8X5S",
+        "outputId": "dbc59a4b-2d7b-4044-c9d1-b4eda43ccb0e"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, -2, -3, 4, 5, 100]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers[1:4]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WPvpkWBi8ZiT",
+        "outputId": "b5d4fa0d-8450-4926-c180-2ee955eac037"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[-2, -3, 4]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers[3:6]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sC0M_4j98ldT",
+        "outputId": "2411e2a5-71fa-4c47-d69f-3f23ae9de784"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[4, 5, 100]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers[3:]  # 인덱스 3번 위치부터 끝까지 자름."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7eZiBsC79cwe",
+        "outputId": "5e42b2d7-dcf6-475a-9d21-6d33b09426a3"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[4, 5, 100]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers[:3]  # 리스트에서 첫 3개 원소를 자름."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c46lK9oS9sqS",
+        "outputId": "4ab9fc03-4ceb-4f69-ebf7-f04782644f01"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, -2, -3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers[-2:]  # 리스트에서 마지막 2개 원소를 자름."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gGHOO9CT-ATz",
+        "outputId": "91542a63-9291-40d5-fe07-f144474a6308"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[5, 100]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers[:1]  # slicing: 리스트에서 첫번째 원소만 잘라낸 새로운 \"리스트\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eQn5xJHz-9f9",
+        "outputId": "12763ab1-2373-42ec-e485-a50b7fb6b8d8"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers[0]  # indexing: 해당 인덱스 위치의 원소를 읽어옴."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WJ-hNL25_fY8",
+        "outputId": "ce4bcc3d-dcd0-4bd5-d9da-bba4fd66632b"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 문자열(string)\n",
+        "\n",
+        "*   문자들의 리스트.\n",
+        "    *   indexing\n",
+        "    *   slicing"
+      ],
+      "metadata": {
+        "id": "YmJB_6Tr_4Cz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "message = '안녕, Python!'"
+      ],
+      "metadata": {
+        "id": "_VqD6jZUAFu1"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "message[0]  # 문자열에서 첫번째 글자"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "aZ9S6j29AKFt",
+        "outputId": "3532edb5-40ad-4375-f632-feee48795c2d"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'안'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "message[-1]  # 문자열에서 마지막 글자"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "H6AoPzY2ApQ1",
+        "outputId": "ead36dc0-076f-42ee-d202-521e5467c8aa"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'!'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "message[:3]  # 문자열에서 첫 3글자를 선택"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "XfFr190jA28L",
+        "outputId": "9410665a-d484-4125-fbee-9e1d8c9725a9"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'안녕,'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "message[-3:]  # 문자열에서 마지막 3글자"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "dsRPtQP_BFsV",
+        "outputId": "4385869a-d4e5-4850-c8cc-19ed5588d18a"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'on!'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 30
         }
       ]
     }
