리스트의 산술 연산.

--- a/lab_python/python06_list.ipynb
+++ b/lab_python/python06_list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPPiwvUbnNFVGgBysa5Vgcg",
+      "authorship_tag": "ABX9TyPEozSOLxnl78B5AxW1QTm9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,8 +111,8 @@
       "source": [
         "# Indexing\n",
         "\n",
-        "인덱스를 사용해서 리스트의 아이템을 사용하는 방법.\n",
-        "`list_name[index]`"
+        "`list_name[index]`.\n",
+        "인덱스를 사용해서 리스트의 아이템을 사용하는 방법."
       ],
       "metadata": {
         "id": "wb2ryudPzB87"
@@ -665,6 +665,95 @@
           },
           "metadata": {},
           "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 리스트의 산술 연산\n",
+        "\n",
+        "*   `list + list`: concatenate. 2개의 리스트의 아이템들을 합쳐서 하나의 리스트로 만듦.\n",
+        "*   `list * int`, `int * list`: replicate. 리스트의 아이템들을 정수만큼 복사해서 아이템 개수를 늘림.\n"
+      ],
+      "metadata": {
+        "id": "bKVZGffFHRI3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('안녕' + 'Python')\n",
+        "print('안녕' * 3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hlr_EGOeH8N_",
+        "outputId": "14e3214d-37d6-4f26-8000-93fb7089ae41"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "안녕Python\n",
+            "안녕안녕안녕\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "[1, 2, 3] + [10, 20, 30]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D6k0Fe_ZILA9",
+        "outputId": "c2b5dd00-cfff-4737-8f52-4a1c8efd4c20"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 10, 20, 30]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "[1, 2, 3] * 3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gDkPzENlIQw3",
+        "outputId": "930cd0e7-8428-4d6b-8314-b5f4399c36e4"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 1, 2, 3, 1, 2, 3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
         }
       ]
     }
